--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "peerDependencies": {
     "@angular/common": "^8.0.0",
     "@angular/core": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
     "node-sass": "^4.11.0"
   }
 }
