--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@angular/common": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/cdk": "^8.0.0",
+    "@angular/animations": "^8.0.0",
     "node-sass": "^4.11.0"
   }
 }
